// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaders transforms correctly using "loaders-0" data 1`] = `
"export default [{
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: [{
                loader: 'babel-loader'
            }]
        }]
    }
}, {
    module: {
        rules: [{
            test: /\\\\.css$/,
            use: [{
                loader: 'style-loader'
            }, {
                loader: 'css-loader',

                options: {
                    modules: true,
                    importLoaders: 1,
                    string: 'test123'
                }
            }]
        }]
    }
}, {
    module: {
        rules: [{
            test: /\\\\.css$/,
            use: [{
                loader: 'style-loader'
            }, {
                loader: 'css-loader',
                options: {
                    modules: true
                }
            }]
        }]
    }
}, {
    module: {
        rules:[{
            test: /\\\\.js$/,

            use: [{
                loader: 'eslint-loader'
            }],

            enforce: 'pre'
        }]
    }
}, {
    module: {
        rules:[{
            test: /\\\\.js$/,

            use: [{
                loader: 'my-post-loader'
            }],

            enforce: 'post'
        }]
    }
}, {
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: [{
                loader: 'babel-loader'
            }]
        }, {
            test: /\\\\.js$/,

            use: [{
                loader: 'eslint-loader'
            }],

            enforce: 'pre'
        }]
    }
}, {
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: [{
                loader: 'babel-loader'
            }]
        }, {
            test: /\\\\.js$/,

            use: [{
                loader: 'my-post-loader'
            }],

            enforce: 'post'
        }]
    }
}];
"
`;

exports[`loaders transforms correctly using "loaders-1" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.css$/,
            use: [{
                loader: 'style-loader'
            }, {
                loader: 'css-loader',

                options: {
                    modules: true,
                    importLoaders: 1,
                    string: 'test123'
                }
            }]
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-2" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.css$/,
            use: [{
                loader: 'style-loader'
            }, {
                loader: 'css-loader',
                options: {
                    modules: true
                }
            }]
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-3" data 1`] = `
"export default {
    module: {
        rules:[{
            test: /\\\\.js$/,

            use: [{
                loader: 'eslint-loader'
            }],

            enforce: 'pre'
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-4" data 1`] = `
"export default {
    module: {
        rules:[{
            test: /\\\\.js$/,

            use: [{
                loader: 'my-post-loader'
            }],

            enforce: 'post'
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-5" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: [{
                loader: 'babel-loader'
            }]
        }, {
            test: /\\\\.js$/,

            use: [{
                loader: 'eslint-loader'
            }],

            enforce: 'pre'
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-6" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.js$/,
            use: [{
                loader: 'babel-loader'
            }]
        }, {
            test: /\\\\.js$/,

            use: [{
                loader: 'my-post-loader'
            }],

            enforce: 'post'
        }]
    }
}
"
`;

exports[`loaders transforms correctly using "loaders-7" data 1`] = `
"export default {
    module: {
        rules: [
            {
                test: /\\\\.js$/,
                exclude: /(node_modules)/,

                use: [{
                    loader: 'babel-loader',

                    options: {
                        presets: ['env']
                    }
                }]
            }
        ]
    }
};
"
`;

exports[`loaders transforms correctly using "loaders-8" data 1`] = `
"module.exports = {
    module: {
        rules: [
            {
                test: /\\\\.js$/,
                use: [{
                    loader: 'style-loader'
                }, {
                    loader: 'css-loader',

                    options: {
                        modules: true,
                        importLoaders: 1,
                        string: 'test123'
                    }
                }],
                include: path.join(__dirname, 'src')
            }
        ]
    }
}
"
`;
